[package]
name = "json-strip-comments"
version = "1.0.3"
edition = "2021"
description = "Strip comments from JSON"
license = "MIT"
readme = "README.md"
repository = "https://github.com/oxc-project/json-strip-comments"

[[bench]]
name    = "strip"
harness = false

[dev-dependencies]
serde_json = "1.0.117"
criterion2 = { version = "0.11.0", default-features = false }

[profile.release]
debug = true

[features]
codspeed = ["criterion2/codspeed"]

[dependencies]
memchr = "2.7.4"
