[workspace]
resolver = "2"
members = [".", "wasm"]

[workspace.package]
edition = "2021"
license = "MIT"

[package]
name = "json-strip-comments"
edition.workspace = true
license.workspace = true
version = "1.0.4"
description = "Strip comments from JSON"
readme = "README.md"
repository = "https://github.com/oxc-project/json-strip-comments"

[[bench]]
name    = "strip"
harness = false

[dev-dependencies]
serde_json = "1.0.117"
criterion2 = { version = "2.0.0", default-features = false }

[features]
codspeed = ["criterion2/codspeed"]

[dependencies]
memchr = "2.7.4"
