[workspace]
resolver = "2"
members = [".", "wasm"]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85.0"

[package]
name = "json-strip-comments"
edition.workspace = true
license.workspace = true
version = "2.0.0"
description = "Strip comments from JSON"
readme = "README.md"
repository = "https://github.com/oxc-project/json-strip-comments"
rust-version.workspace = true

[[bench]]
name    = "strip"
harness = false

[dev-dependencies]
serde_json = "1.0.142"
criterion2 = { version = "3.0.2", default-features = false }

[features]
codspeed = ["criterion2/codspeed"]

[dependencies]
memchr = "2.7.5"
