[package]
name = "json-strip-comments-wasm"
version = "0.0.1"
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
test = false
doctest = false

[dependencies]
json-strip-comments = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tsify = "0.5.0"
wasm-bindgen = "0.2.99"
